--- a/index.html
+++ b/index.html
@@ -9,79 +9,85 @@
 
 <body>
 
-    <header class="header" id="header section" id="header section ul li">
+    <header class="header">
         <!-- Title of Company -->
         <h1>Hori<span id="seo">seo</span>n</h1>
 
-        <!-- Section 1: Offerings -->
-        <section>
+        <!-- Navigation: Offerings -->
+        <nav>
             <!-- Unordered list of Offerings -->
             <ul>
                 <li><a href= "#search-engine-optimization"> Search Engine Optimization</a></li>
                 <li><a href= "#online-reputation-management"> Online Reputation Management</a></li>
                 <li><a href= "#social-media-marketing"> Social Media Marketing</a></li>
             </ul>
-        </section>
+        </nav>
     </header>
 
     <!-- Main Image -->
-    <img src= "assets/images/digital-marketing-meeting.jpg" alt="Digital Marketing Meeting" id= "hero"/>
+    <img src= "assets/images/digital-marketing-meeting.jpg" alt="Digital Marketing Meeting" id= "hero">
 
-    <!-- Section 2: Content of Offerings-->
-    <section id="content">
-
-        <div id="search-engine-optimization" class="search-engine-optimization">
+    <!-- Main: Content of Offerings-->
+    <main class="content">
+        
+        <section id="search-engine-optimization" class="content-description">
             <!-- Image SEO -->
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </section>
 
-        <div id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="content-description">
             <!-- Image Reputation-->
             <img src="./assets/images/online-reputation-management.jpg" alt= "Online Reputaion Management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
+        </section>
 
-        <div id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="content-description">
             <!-- Image Social-->
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </section>
+        </section>
+    </main>
 
-    <!-- Section 3: Benefits -->
-    <section class="benefits">
-        <div class="benefit-description">
+    <!-- Article: Benefits -->
+    <aside class="benefits">
+
+        <section class="benefit-description">
+
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-description">
+        </section>
+
+        <section class="benefit-description">
+
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-description">
+        </section>
+
+        <section class="benefit-description">
+
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </section>
+        </section>
+    </aside>
 
     <footer class="footer">
         <!-- Page Created by Horiseon -->
