--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Main: Content of Offerings-->
     <main class="content">
         
-        <section id="search-engine-optimization" class="content-description">
+        <section class="content-description">
             <!-- Image SEO -->
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -39,8 +39,8 @@
             </p>
         </section>
 
-        <section id="online-reputation-management" class="content-description">
-            <!-- Image Reputation-->
+        <section class="content-description">
+            <!-- Image Reputation -->
             <img src="./assets/images/online-reputation-management.jpg" alt= "Online Reputaion Management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -48,8 +48,8 @@
             </p>
         </section>
 
-        <section id="social-media-marketing" class="content-description">
-            <!-- Image Social-->
+        <section class="content-description">
+            <!-- Image Social -->
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -58,7 +58,7 @@
         </section>
     </main>
 
-    <!-- Article: Benefits -->
+    <!-- Aside: Benefits of offerings -->
     <aside class="benefits">
 
         <section class="benefit-description">
@@ -89,8 +89,8 @@
         </section>
     </aside>
 
+    <!-- Footer: Page creation info -->
     <footer class="footer">
-        <!-- Page Created by Horiseon -->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
