--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Main: Content of Offerings-->
     <main class="content">
         
-        <section class="content-description">
+        <section id="search-engine-optimization" class="content-description">
             <!-- Image SEO -->
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -39,7 +39,7 @@
             </p>
         </section>
 
-        <section class="content-description">
+        <section id="online-reputation-management" class="content-description">
             <!-- Image Reputation -->
             <img src="./assets/images/online-reputation-management.jpg" alt= "Online Reputaion Management" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -48,7 +48,7 @@
             </p>
         </section>
 
-        <section class="content-description">
+        <section id="social-media-marketing" class="content-description">
             <!-- Image Social -->
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
